[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
authors = [
  { name="jerperez" },
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE*"]

[project.urls]
Homepage = "https://github.com/jerperez42/piscine-python-data-0"

[tool.hatch.build.targets.wheel]
packages = ["src/ft_package"]
